--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,3 +1,50 @@
-<p>
-  heroes works!
-</p>
+<h1>Heroe</h1>
+<hr>
+
+<div class="row">
+    <div class="col-md-12 text-right">
+        <button [routerLink]="['/heroe','nuevo']" class="btn btn-outline-primary" type="button" name="button">
+          Nuevo Heroe
+        </button>
+    </div>
+</div>
+<br>
+
+<div class="row">
+
+    <div class="col-md-12">
+
+        <div>
+
+            <table class="table">
+
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Casa</th>
+                        <th scope="col">Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+
+            </table>
+
+        </div>
+
+    </div>
+
+</div>
