--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -1,3 +1,38 @@
-<p>
-  heroe works!
-</p>
+<h3>
+    Heroe <small>Nombre...</small></h3>
+<button [routerLink]="['heroes']" class="btn btn-outline-danger">
+      Regresar
+    </button>
+
+<hr>
+
+<div class="row animated fadeIn fast">
+    <div class="col-md-12">
+        <form (ngSubmit)="guardar()" #forma="ngForm">
+            <div class="form-group">
+                <label>Nombre:</label>
+                <input [(ngModel)]="heroe.nombre" name="nombre" type="text" class="form-control" placeholder="Nombre de Heroe" required>
+            </div>
+
+            <div class="form-group">
+                <label>Casa:</label>
+                <select [(ngModel)]="heroe.casa" name="casa" class="form-control">
+                    <option value="Marvel">Marvel</option>
+                    <option value="DC">DC</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>Bio:</label>
+                <textarea [(ngModel)]="heroe.bio" name="bio" type="text" name="" class="form-control" required>
+              </textarea>
+            </div>
+
+            <div class="form-group">
+                <button [disabled]="!forma.valid" type="submit" class="btn btn-outline-primary">
+                  Guardar Cambios
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
