--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -10,14 +10,10 @@
 </div>
 <br>
 
-<div class="row">
-
+<div class="row animated fadeIn fast">
     <div class="col-md-12">
-
         <div>
-
             <table class="table">
-
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
@@ -40,11 +36,7 @@
                         <td></td>
                     </tr>
                 </tbody>
-
             </table>
-
         </div>
-
     </div>
-
 </div>
