--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -11,7 +11,7 @@
         <form (ngSubmit)="guardar()" #forma="ngForm">
             <div class="form-group">
                 <label>Nombre:</label>
-                <input [(ngModel)]="heroe.nombre" name="nombre" type="text" class="form-control" placeholder="Nombre de Heroe" required>
+                <input [(ngModel)]="heroe.nombre" name="nombre" type="text" class="form-control" placeholder="Nombre del Heroe" required>
             </div>
 
             <div class="form-group">
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <label>Bio:</label>
-                <textarea [(ngModel)]="heroe.bio" name="bio" type="text" name="" class="form-control" required>
+                <textarea [(ngModel)]="heroe.bio" name="bio" type="text" class="form-control" required>
               </textarea>
             </div>
 
